force-app/main/default/objects/COE_Bidding__mdt/COE_Bidding__mdt.object-meta.xml
<CustomObject>
    <label>COE Bidding</label>
    <pluralLabel>COE Biddings</pluralLabel>
</CustomObject>