force-app/main/default/objects/COE_Bidding__mdt/fields/CVES_Amount__c.field-meta.xml
<CustomField>
    <fullName>CVES_Amount__c</fullName>
    <label>CVES Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>