force-app/main/default/objects/COE_Bidding__mdt/fields/Duty_Rate__c.field-meta.xml
<CustomField>
    <fullName>Duty_Rate__c</fullName>
    <label>Duty Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>