force-app/main/default/objects/COE_Bidding__mdt/fields/EEAI_Cap__c.field-meta.xml
<CustomField>
    <fullName>EEAI_Cap__c</fullName>
    <label>EEAI Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>