force-app/main/default/objects/COE_Bidding__mdt/fields/EEAI_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EEAI_Percentage__c</fullName>
    <label>EEAI Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>