force-app/main/default/objects/COE_Bidding__mdt/fields/SC_CPF_Comm_Rate__c.field-meta.xml
<CustomField>
    <fullName>SC_CPF_Comm_Rate__c</fullName>
    <label>SC CPF Comm Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>