force-app/main/default/objects/COE_Bidding__mdt/listViews/All_Biddings.listView-meta.xml
<ListView>
    <fullName>All_Biddings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All Biddings</label>
</ListView>